rock paper scissors lava

--- a/views/rps_game.erb
+++ b/views/rps_game.erb
@@ -1,1 +1,4 @@
 <h1>WELCOME TO ROCK PAPER SCISSORS</h1>
+<h2>You played <%= @game.type %>.</h2>
+<h2>I played <%= @game.computer_play %>.</h2>
+<h2><%= @game.game_outcome %></h2>
